Style fix(align-center)

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -12,7 +12,7 @@
     align-items: center;
     font-size: 1.2rem;
 }
-.align-center{
+.align-items-center{
     align-items: center !important;
 }
 #sidebar .nav li i{
